@@ -1,5 +1,11 @@
 2004-12-11  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/font-metric.cc (ly:font-get-glyph-index): New function.
+
+	* scm/output-gnome.scm (named-glyph): Use it.
+
+	* scm/lily.scm (ly:all-stencil-expressions): Add named-glyph.
+
 	* flower/string.cc (substitute_char): Rename, rewrite, modify this.
 	(upper_string, lower_string, reverse_string): Remove.
 
